@@ -3,7 +3,7 @@
 #https://wiki.mozilla.org/Security/Server_Side_TLS
 #https://mozilla.github.io/server-side-tls/ssl-config-generator/
 #
-#used openssl 1.0.1e and "openssl ciphers -V 'CIPHER-SUITE-CONFIG' | cut -c 11-19" to get these lists
+#used openssl 1.0.2d and "openssl ciphers -V 'CIPHER-SUITE-CONFIG' | cut -c 11-19" to get these lists
 #where CIPHER-SUITE-CONFIG is the proposed openssl Ciphersuite config
 
 <modern>
@@ -65,16 +65,32 @@
 0xC0,0x22
 0xC0,0x21
 0xC0,0x20
+0x00,0xA5
+0x00,0xA1
 0x00,0x6A
+0x00,0x69
+0x00,0x68
+0x00,0x37
+0x00,0x36
 0xC0,0x1F
 0xC0,0x1E
 0xC0,0x1D
+0x00,0xA4
+0x00,0xA0
+0x00,0x3F
+0x00,0x3E
 0x00,0x32
+0x00,0x31
+0x00,0x30
 0x00,0x88
 0x00,0x87
+0x00,0x86
+0x00,0x85
 0x00,0x84
 0x00,0x45
 0x00,0x44
+0x00,0x43
+0x00,0x42
 0x00,0x41
 0x00,0x0A
 </intermediate>
@@ -113,21 +129,145 @@
 0xC0,0x22
 0xC0,0x21
 0xC0,0x20
+0x00,0xA5
+0x00,0xA1
 0x00,0x6A
+0x00,0x69
+0x00,0x68
+0x00,0x37
+0x00,0x36
 0xC0,0x1F
 0xC0,0x1E
 0xC0,0x1D
+0x00,0xA4
+0x00,0xA0
+0x00,0x3F
+0x00,0x3E
 0x00,0x32
+0x00,0x31
+0x00,0x30
 0x00,0x0A
 0x00,0x88
 0x00,0x87
+0x00,0x86
+0x00,0x85
 0x00,0x84
+0x00,0x45
+0x00,0x44
+0x00,0x43
+0x00,0x42
+0x00,0x41
 0xC0,0x1C
 0xC0,0x1B
 0xC0,0x1A
-0x00,0x45
-0x00,0x44
-0x00,0x41
+0x00,0x10
+0x00,0x0D
 </old>
 
-#else means unknown or dangerous....
+<all>
+0xC0,0x30
+0xC0,0x2C
+0xC0,0x28
+0xC0,0x24
+0xC0,0x14
+0xC0,0x0A
+0xC0,0x22
+0xC0,0x21
+0xC0,0x20
+0x00,0xA5
+0x00,0xA3
+0x00,0xA1
+0x00,0x9F
+0x00,0x6B
+0x00,0x6A
+0x00,0x69
+0x00,0x68
+0x00,0x39
+0x00,0x38
+0x00,0x37
+0x00,0x36
+0x00,0x88
+0x00,0x87
+0x00,0x86
+0x00,0x85
+0xC0,0x32
+0xC0,0x2E
+0xC0,0x2A
+0xC0,0x26
+0xC0,0x0F
+0xC0,0x05
+0x00,0x9D
+0x00,0x3D
+0x00,0x35
+0x00,0x84
+0x00,0x8D
+0xC0,0x2F
+0xC0,0x2B
+0xC0,0x27
+0xC0,0x23
+0xC0,0x13
+0xC0,0x09
+0xC0,0x1F
+0xC0,0x1E
+0xC0,0x1D
+0x00,0xA4
+0x00,0xA2
+0x00,0xA0
+0x00,0x9E
+0x00,0x67
+0x00,0x40
+0x00,0x3F
+0x00,0x3E
+0x00,0x33
+0x00,0x32
+0x00,0x31
+0x00,0x30
+0x00,0x9A
+0x00,0x99
+0x00,0x98
+0x00,0x97
+0x00,0x45
+0x00,0x44
+0x00,0x43
+0x00,0x42
+0xC0,0x31
+0xC0,0x2D
+0xC0,0x29
+0xC0,0x25
+0xC0,0x0E
+0xC0,0x04
+0x00,0x9C
+0x00,0x3C
+0x00,0x2F
+0x00,0x96
+0x00,0x41
+0x00,0x07
+0x00,0x8C
+0xC0,0x11
+0xC0,0x07
+0xC0,0x0C
+0xC0,0x02
+0x00,0x05
+0x00,0x04
+0x00,0x8A
+0xC0,0x12
+0xC0,0x08
+0xC0,0x1C
+0xC0,0x1B
+0xC0,0x1A
+0x00,0x16
+0x00,0x13
+0x00,0x10
+0x00,0x0D
+0xC0,0x0D
+0xC0,0x03
+0x00,0x0A
+0x00,0x8B
+0x00,0x15
+0x00,0x12
+0x00,0x0F
+0x00,0x0C
+0x00,0x09
+</all>
+
+#else means unknown...
